--- a/font_recommend_app/src/components/Cards.css
+++ b/font_recommend_app/src/components/Cards.css
@@ -48,7 +48,7 @@ input[type=text] {
     font-size: 32px;
     font-weight: 600;
     margin-left: 10%;
-    margin-top: 2%;
+    margin-top: 32px;
 }
 
 .page_title2 {
@@ -70,7 +70,7 @@ input[type=text] {
 
 .cards__wrapper {
     position: relative;
-    margin: 30px 0 16px;
+    margin: 30px 0 0px;
 }
 
 .cards__items {
@@ -307,4 +307,53 @@ input[type=text] {
     font-family: "탈네모";
     font-weight: 100;
     src: url("../fonts/HANBaekB.ttf") format("truetype");
+}
+
+/* Result */
+
+.result_inform_wrapper{
+    display: flex;
+    gap: 20%;
+    margin-top: 40px;
+    margin-left: 10%;
+    align-items: center;
+}
+
+.result_page_inform{
+    display: flex;
+    flex-direction: column;
+
+    /* width: 100%; */
+}
+
+.result_page_title {
+    text-align: left;
+    font-size: 32px;
+    font-weight: 600;
+    /* margin-left: 10%; */
+    /* margin-top: 32px; */
+    width: 100%;
+}
+
+.result_page_title2 {
+    display: flex;
+    text-align: left;
+    font-size: 24px;
+    font-weight: 400;
+    /* margin-left: 10%; */
+    width: 100%;
+}
+
+.font-size-adjuster {
+    display: flex;
+    align-items: center;
+    width: 20%;
+    height: 44px;
+    /* transform: scale(1.1); */
+
+}
+
+.font-size-input2 {
+    width: 200px;
+
 }
