--- a/font_recommend_app/src/components/Cards.css
+++ b/font_recommend_app/src/components/Cards.css
@@ -316,6 +316,7 @@ input[type=text] {
     gap: 20%;
     margin-top: 40px;
     margin-left: 10%;
+    margin-bottom: 32px;
     align-items: center;
 }
 
