--- a/font_recommend_app/src/components/Controllers.css
+++ b/font_recommend_app/src/components/Controllers.css
@@ -14,7 +14,7 @@
 .select-all-button{
     display: flex;
     gap: 4px;
-    margin-left: 20px;
+    margin-left: 5%;
     margin-right: 16px;
     cursor: pointer;
     border: none;
@@ -49,12 +49,13 @@
 .controller-container {
     display: flex;
     flex-flow: row;
+    justify-content: center;
 }
 
 .controller-wrapper{
     display: flex;
     flex-flow: row;
-    width: 100%;
+    width: 90%;
     border-width: 2px;
     border-radius: 20px;
     border-style: solid;
@@ -145,4 +146,19 @@ span{
 .minus-icon{
     font-size: 30px;
     margin: 0;
+}
+
+.initial-message{
+    margin-left: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 100px;
+    font-size: 24px;
+    color: gainsboro;
+    border-width: 2px;
+    border-radius: 20px;
+    border-style: dotted;
+    border-color: gainsboro;
 }
