--- a/font_recommend_app/src/components/Header.css
+++ b/font_recommend_app/src/components/Header.css
@@ -1,14 +1,23 @@
 .header {
     background-color: #0054A4;
     color: #fff;
-    text-align: center;
+    text-align: left;
     padding: 20px;
     display: flex;
     align-items: center;
 }
 
-.header__title {
+.title-wrapper{
+    margin-left: 8px;
+}
+
+.header-title {
     font-size: 28px;
+}
+
+.header-title2 {
+    font-size: 16px;
+    width: 100%;
 }
 
 .dotoriicon {
