--- a/font_recommend_app/src/components/Cards.css
+++ b/font_recommend_app/src/components/Cards.css
@@ -1,5 +1,5 @@
 .cards {
-    padding: 32px 4rem 4rem 4rem;
+    padding: 16px 4rem 4rem 4rem;
     background: #fff;
 }
 
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: baseline;
     gap: 32px;
     margin: 0px 0px 40px;
 }
