ebs주시경체 css 수정

--- a/font_recommend_app/src/fonts.css
+++ b/font_recommend_app/src/fonts.css
@@ -232,24 +232,21 @@
 
 @font-face {
   font-family: 'EBS주시경B';
-  src: url('fonts/EBS주시경B.ttf') format('truetype');
+  src: url('fonts/EBSJuSiGyeongBold.woff') format('woff');
 }
 
 
-/* @font-face {
-  font-family: 'EBS주시경L';
-  src: url('fonts/EBS주시경L.ttf') format('truetype');
-} */
 @font-face {
   font-family: 'EBS주시경L';
-  src: url('fonts/EBS주시경L.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+  src: url('fonts/EBSJuSiGyeongLight.woff') format('woff');
 }
+
 
 /* @font-face {
   font-family: 'EBS주시경M';
   src: url('fonts/EBS주시경M.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 } */
 @font-face {
   font-family: 'EBS주시경M';
