--- a/font_recommend_app/src/components/Controllers.css
+++ b/font_recommend_app/src/components/Controllers.css
@@ -4,7 +4,10 @@
 }
 
 .control-container{
+    display: flex;
+
     margin-bottom: 32px;
+    justify-content: center;
 }
 
 .control_inform_wrapper{
@@ -38,8 +41,9 @@
 .select-all-button{
     display: flex;
     gap: 4px;
-    margin-left: 5%;
+    margin-left: 16px;
     margin-right: 16px;
+    margin-bottom: 8px;
     cursor: pointer;
     border: none;
     font-size: 16px;
@@ -47,10 +51,71 @@
 }
 
 .control-items{
+    background-color: #efefef;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding-left: 8px;
+    padding-right: 16px;
+}
+
+.total-controller-container{
+    /* margin-left: 32px; */
     display: flex;
     flex-direction: column;
-    gap: 32px;
-    padding-left: 8px;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.total-controller-wrapper{
+    margin: -16px 0px 0px 0px;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    background-color: #efefef;
+    border:none;
+    border-radius: 20px;
+    width: 300px;
+    font-size: 24px;
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+}
+
+.total-controllers{
+    display: flex;
+    flex-direction: column;
+}
+
+.total-controller{
+    margin-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.total-controller-title{
+    width: 72px;
+}
+
+.total-controller-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+}
+
+.total-controller-title-inform{
+    font-size: 16px;
+    width: 100%;
+}
+
+.total-controller-bars{
+    margin: 32px 0px 32px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    width: 100%;
+    align-items: center;
 }
 
 .mix-button-wrapper{
@@ -71,15 +136,21 @@
 
 /* ControllerCard */
 .controller-container {
+    margin-top: 16px;
+    margin-bottom: 16px;
     display: flex;
-    flex-flow: row;
+    flex-flow: column;
     justify-content: center;
+    align-items: center;
+    gap: 16px;
 }
 
 .controller-wrapper{
     display: flex;
-    flex-flow: row;
-    width: 90%;
+    flex-flow: column;
+    background-color: #fff;
+    width: 300px;
+    height: 400px;
     border-width: 2px;
     border-radius: 20px;
     border-style: solid;
@@ -96,18 +167,15 @@
 .control-inform{
     display: flex;
     flex-direction: column;
-    margin: 32px 16px 80px;
+    margin: 16px 32px 40px;
     gap: 16px;
     font-size: 24px;
-    width: 100%;
-    padding-right: 40px;
+    padding-right: 4px;
 }
 
 .controller-bars {
     width: 100%;
-    text-align: center;
-    margin: 32px 16px 0px;
-    gap: 12px;
+    margin: 8px 16px 16px ;
     display: flex;
     flex-direction: column;
 }
@@ -121,7 +189,7 @@ span{
 }
 
 .check-button-wrapper{
-    margin: 32px 32px 0px 32px;
+    margin: 16px 16px 8px 24px;
     display: flex;
     align-items: baseline;
 }
@@ -180,9 +248,7 @@ span{
     width: 90%;
     height: 100px;
     font-size: 24px;
-    color: gainsboro;
+    color: rgb(175, 175, 175);
     border-width: 2px;
     border-radius: 20px;
-    border-style: dotted;
-    border-color: gainsboro;
 }
