--- a/font_recommend_app/src/components/Result.css
+++ b/font_recommend_app/src/components/Result.css
@@ -18,7 +18,7 @@
 
 .result_page_title {
     text-align: left;
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 600;
     width: 100%;
 }
@@ -26,7 +26,7 @@
 .result_page_title2 {
     display: flex;
     text-align: left;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
     width: 100%;
 }
@@ -80,13 +80,14 @@
 }
 
 .go-back-button{
+    margin-left: 20px;
     background-color:#0054A4;
     color: #fff;
     border:none;
-    border-radius: 20px;
-    width: 200px;
-    height: 48px;
-    font-size: 24px;
+    border-radius: 16px;
+    width: 140px;
+    height: 36px;
+    font-size: 20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     cursor: pointer;
 }
