--- a/font_recommend_app/src/components/Cards.css
+++ b/font_recommend_app/src/components/Cards.css
@@ -235,7 +235,8 @@ ul {
     margin-top: 15px;
     flex-flow: column;
     width: 250px;
-    height: 230px;
+    min-height: 280px;
+    height: max-content;
     background-color: #FBFBFB;
     box-shadow: 0 6px 20px rgba(85, 88, 92, 0.17);
     -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
@@ -276,6 +277,9 @@ ul {
 .pop_cards__item__info {
     padding: 0px 0px 0px 16px;
     font-size: 16px;
+    align-items: center;
+    margin-left: -4px;
+    margin-right: 2px;
 }
 
 @media only screen and (min-width: 1200px) {
